framec_tests/language_specific/cpp/v3_outline/negative/header_outside_section.frm
@target cpp

system S {
    fn bad() {
        // body
    }
}
